added email & status

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,5 @@
 MONGO_URI = <Mongo database path>
 BEACON_CHAIN = <Beacon chain URL>
+SMTP_USER= <Username for sending email>
+SMTP_PASS= <Password for sending email>
+PORT=9000
