--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.23",
     "morgan": "~1.9.1",
+    "node-telegram-bot-api": "^0.50.0",
     "nodemailer": "^6.4.10"
   }
 }
