--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,6 @@
 MONGO_URI = <Mongo database path>
 BEACON_CHAIN = <Beacon chain URL>
-SMTP_USER= <Username for sending email>
-SMTP_PASS= <Password for sending email>
+SMTP_USER = <Username for sending email>
+SMTP_PASS = <Password for sending email>
+TELEGRAM_BOT_TOKEN= <Token for telegram bot>
 PORT=9000
